erDiagram
    cargo          ||--o{ pallet : ""
    cargo          ||--o{ transport_task : ""
    pallet         ||--o{ transport_task : ""
    rack           ||--o{ rack_level : ""
    rack_level     ||--o{ storage_slot : ""
    storage_slot   ||--o{ transport_task : "destination_slot_id"
    transport_task ||--o{ transport_command : ""
    transport_task ||..o{ storage_slot : "reserved_task_id (FK 없음)"
    cargo          ||..o{ storage_slot : "stored_cargo_id (FK 없음)"

    cargo {
        bigint   id PK
        varchar  cargo_id UK
        double   width
        double   length
        double   height
        double   volume
        datetime created_at
        datetime updated_at
    }
    pallet {
        bigint   id PK
        varchar  pallet_id UK
        varchar  cargo_id FK
        double   pickup_x
        double   pickup_y
        double   pickup_heading
        varchar  status
        datetime created_at
        datetime updated_at
    }
    rack {
        bigint   id PK
        varchar  rack_code UK
        varchar  rack_name
        double   position_x
        double   position_y
        datetime created_at
        datetime updated_at
    }
    rack_level {
        bigint   id PK
        bigint   rack_id FK
        int      level_number "UK(rack_id, level_number)"
        double   clear_width
        double   clear_length
        double   clear_height
        double   fork_height
        datetime created_at
        datetime updated_at
    }
    storage_slot {
        bigint   id PK
        varchar  slot_code UK
        bigint   rack_level_id FK
        double   width
        double   length
        double   height
        double   destination_x
        double   destination_y
        double   destination_heading
        varchar  status "기본 EMPTY"
        varchar  reserved_task_id
        varchar  stored_cargo_id
        datetime created_at
        datetime updated_at
    }
    transport_task {
        bigint   id PK
        varchar  task_code UK
        varchar  cargo_id FK
        varchar  pallet_id FK
        varchar  vehicle_id "FK 아님"
        double   source_x
        double   source_y
        double   source_heading
        bigint   destination_slot_id FK
        double   destination_x
        double   destination_y
        double   destination_heading
        double   fork_height
        varchar  cargo_orientation
        varchar  status
        datetime assigned_at
        datetime started_at
        datetime picked_up_at
        datetime completed_at
        datetime failed_at
        datetime created_at
        datetime updated_at
    }
    transport_command {
        bigint   id PK
        varchar  command_id UK "command-result 역추적 키"
        bigint   task_id FK
        varchar  task_code "조회 편의용 중복 보관"
        varchar  vehicle_id
        varchar  command_type
        varchar  stage "ROS2 단계 결과, 규격 미확정"
        varchar  status
        varchar  payload
        varchar  failure_reason
        datetime published_at
        datetime acknowledged_at
        datetime completed_at
        datetime created_at
        datetime updated_at
    }
